# ece5960-Physical-Design

./: README.md
PA1/: 2  FMPartition.cpp  FMPartition.hpp  a.out  all_testcases.sh  fm  main.cpp  runme-compile.sh
PA2/: .gitignore  CMakeLists.txt  run.out  run_test.sh  tags
PA2/checker/: .checker.py.swp
PA2/floorplanner/: .floorplanner.cpp.swp  .floorplanner.hpp.swp  CMakeLists.txt  floorplanner.cpp  floorplanner.hpp
PA2/input_pa2/: example.block  example.nets
PA2/main/: .main.cpp.swp  CMakeLists.txt  main.cpp
PA2/output/: 1.out  2.out  3.out  ami33.out  ami49.out  hp.out  xerox.out
PA2/output/legal_outputs/: 1.out  2.out  3.out  ami33.out  ami49.out  xerox.out
PA2/unittests/: CMakeLists.txt  example_test.cpp  verify_parse.cpp
PA3/: CMakeLists.txt  run.sh
PA3/main/: CMakeLists.txt  main.cpp
PA3/outputs/: 1.out  2.out  3.out  4.out  5.out  6.out  7.out  8.out
PA3/router/: CMakeLists.txt  router.cpp  router.hpp
PA3/unittests/: CMakeLists.txt  example_test.cpp
